freshman first commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
   <h1>Hello, Company Project</h1>
+  <main>
+    this is freshman in charge
+    i am making my first project
+  </main>
   <p>This is a simple message for the company project.</p>
 </body>
 </html>
