freshman second commit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <main>
     this is freshman in charge
     i am making my first project
+ 
+    <h2> this is second commit from freshman</h2>
+    
   </main>
   <p>This is a simple message for the company project.</p>
 </body>
