--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
   <h1>Hello, Company Project</h1>
-  <main>
-    this is freshman in charge
-    i am making my first project
-  </main>
   <p>This is a simple message for the company project.</p>
+
+  <h2>하하호호 히히 
+    해해해해해
+    해준이~~유리야~~!!
+  </h2>
 </body>
 </html>
