--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     this is freshman in charge
     i am making my first project
  
-    <h2> this is second commit from freshman</h2>
+    <h2> this is second commit by freshman</h2>
+    <h3> this is third commit by freshman</h3>
+
     
   </main>
   <p>This is a simple message for the company project.</p>
